manifest.yaml
#backend deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment-trial
  labels:
    app: expense-tracker
spec:
   replicas: 1
   selector:
     matchLabels:
      app: expense-tracker
   template:
     metadata:
        name: backend-pod
        labels:
          app: expense-tracker
     spec: 
       containers:
        - name: backend-pod 
          image: image-registry.openshift-image-registry.svc:5000/amisha-jenkins/expense-tracker-backend-trial:latest
          ports:
           - containerPort: 5000
---
#backend-service
kind: Service 
apiVersion: v1 
metadata: 
  name: backend-service-trial
spec:
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 5000
  selector:
    app: expense-tracker
---
#backend-route
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend-route-trial
  namespace: amisha-jenkins
  labels:
    app: expense-tracker
spec:
  to:
    kind: Service
    name: backend-service-trial
  port:
    targetPort: 5000
    
---
 #frontend deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-trial
  labels:
    app: expense-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-tracker
  template:
    metadata:
      name: frontend-pod
      labels:
        app: expense-tracker
    spec:
      containers:
       - name: frontend-pod
         image: image-registry.openshift-image-registry.svc:5000/amisha-jenkins/expense-tracker-frontend:latest
         ports:
         - containerPort: 3000
---
#frontend-service
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000
  selector: 
     app: expense-tracker
        
---
